Nahrazeni immutable listu mutable variantami